modxRepository-1.1.0-beta
=============================================================
First release