@@ -4,7 +4,7 @@
  * Нельзя подгружать основной класс response
  */
 
-class modxRepositoryGetRepository extends modProcessor{
+class modxRepositoryGetRepositories extends modxRepositoryProcessor{
     
     var $TVs = array();
     
@@ -13,7 +13,6 @@ class modxRepositoryGetRepository extends modProcessor{
         /*
          * Получаем ID TV-шек
          */
-        
         $this->getTVs();
         
         if($this->hasErrors()){
@@ -48,8 +47,34 @@ class modxRepositoryGetRepository extends modProcessor{
     
     function getData($where = array(), $limit = 0){
         
+        /*
+         * If root exists, get repositories parents
+         */
+        $parents = array();
+        if($root = $this->getProperty('root' )){
+            $q = $this->modx->newQuery('modResource');
+            $q->select(array('modResource.id'));
+            $q->where(array(
+                'modResource.published' => true,
+                'modResource.deleted' => false,
+                'modResource.hidemenu' => false,
+                'modResource.parent' => $root,
+            ));
+            if(!$q->prepare() OR !$q->stmt->execute() OR !$result = $q->stmt->FetchAll(PDO::FETCH_ASSOC)){
+                $this->failure('Failure get repositories parents');
+            }
+            foreach($result as $r){
+                $parents[] = $r['id'];
+            }
+        }
+       
+        
+        /*
+         * Get Repositories
+         */
         $q = $this->modx->newQuery('modResource');
         $q->innerJoin('modTemplateVarResource', 'object_id', "object_id.contentid = modResource.id");
+        $q->innerJoin('modTemplate', 'tpl', "tpl.id = modResource.template");
         $q->leftJoin('modTemplateVarResource', 'templated', "templated.contentid = modResource.id AND 'templated.tmplvarid'  = ". $this->TVs['templated']);
         
         $q->select(array(
@@ -63,7 +88,12 @@ class modxRepositoryGetRepository extends modProcessor{
             'deleted'   => 0,
             'hidemenu'  => 0,
             'object_id.tmplvarid'  => $this->TVs['object_id'],
+            'tpl.templatename'  => 'Repository',
         ), $where);
+        
+        if($parents){
+            $where['parent:IN'] = $parents;
+        }
         
         $q->where($where);
         
@@ -78,6 +108,6 @@ class modxRepositoryGetRepository extends modProcessor{
     }
 }
 
-return 'modxRepositoryGetRepository';
+return 'modxRepositoryGetRepositories';
 
 ?>
